force-app/main/default/objects/Item__c/Item__c.object-meta.xml
<CustomObject>
    <description>Abstract version of an Item</description>
    <label>Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>