force-app/main/default/objects/Item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Deactivate an item so it disappears from UI rather than deleting it. Deletion will leave orphan items</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>