force-app/main/default/objects/Item__c/fields/Below_Threshhold__c.field-meta.xml
<CustomField>
    <fullName>Below_Threshhold__c</fullName>
    <formula>( Count__c &lt; Threshhold_Limit__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Below Threshhold</label>
    <type>Checkbox</type>
</CustomField>