force-app/main/default/objects/Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Item Category</description>
    <inlineHelpText>Select an Item Category</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A - Other</fullName>
                <default>true</default>
                <label>N/A - Other</label>
            </value>
            <value>
                <fullName>Medical Supplies</fullName>
            </value>
            <value>
                <fullName>Sanitary Supplies</fullName>
            </value>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>Paper Plates</fullName>
            </value>
            <value>
                <fullName>Snack Foods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>