force-app/main/default/objects/Item__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Type and SubType (eg Diapers Small)</description>
    <formula>IF(ISBLANK(SubType__c),Type__c,Type__c  &amp; &#39; - &#39; &amp; SubType__r.Name)</formula>
    <inlineHelpText>Type and SubType (eg Diapers Small)</inlineHelpText>
    <label>Name/Nombre</label>
    <type>Text</type>
</CustomField>