force-app/main/default/objects/Item__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <description>Description of the item</description>
    <inlineHelpText>Description of the item (i.e. Pampers Diapers, Size 3, Quantity 20)</inlineHelpText>
    <label>Item Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>