force-app/main/default/objects/Item__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>Item Sub Categroy</description>
    <inlineHelpText>Item Sub Category</inlineHelpText>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>N/A Other</fullName>
                <default>true</default>
                <label>N/A Other</label>
            </value>
            <value>
                <fullName>Shoes</fullName>
            </value>
            <value>
                <fullName>Diapers</fullName>
            </value>
            <value>
                <fullName>Shirts</fullName>
            </value>
            <value>
                <fullName>Pants</fullName>
            </value>
            <value>
                <fullName>Underwear</fullName>
            </value>
            <value>
                <fullName>Gloves</fullName>
            </value>
            <value>
                <fullName>Socks</fullName>
            </value>
            <value>
                <fullName>Deodorant</fullName>
            </value>
            <value>
                <fullName>Toothpaste</fullName>
            </value>
            <value>
                <fullName>Toothbrushes</fullName>
            </value>
            <value>
                <fullName>Combs</fullName>
            </value>
            <value>
                <fullName>Adult Blouses</fullName>
            </value>
            <value>
                <fullName>Child Clothes</fullName>
            </value>
            <value>
                <fullName>Baby Wipes</fullName>
            </value>
            <value>
                <fullName>Baby Bottles</fullName>
            </value>
            <value>
                <fullName>Sealed snack food</fullName>
            </value>
            <value>
                <fullName>Gift cards to purchase food items</fullName>
            </value>
            <value>
                <fullName>Phone cards</fullName>
            </value>
            <value>
                <fullName>Plastic bags</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>