force-app/main/default/objects/Item__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubType</label>
    <referenceTo>SubType__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>