force-app/main/default/objects/Item__c/fields/Threshhold_Limit__c.field-meta.xml
<CustomField>
    <fullName>Threshhold_Limit__c</fullName>
    <defaultValue>20</defaultValue>
    <description>If Count &lt; Threshhold Limit Number then this item will show up in Low Quantity report</description>
    <inlineHelpText>If Count &lt; Threshhold Limit Number then this item will show up in Low Quantity report</inlineHelpText>
    <label>Threshhold Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>