force-app/main/default/objects/Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Name of the item (i.e. Pampers)</description>
    <inlineHelpText>Name of the item</inlineHelpText>
    <label>Type</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>