force-app/main/default/objects/Item__c/validationRules/Item_Count_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Item_Count_cannot_be_negative</fullName>
    <active>true</active>
    <description>Fail update if count goes below 0</description>
    <errorConditionFormula>Count__c &lt;0</errorConditionFormula>
    <errorMessage>Item Count cannot be negative</errorMessage>
</ValidationRule>