force-app/main/default/objects/Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Count__c</columns>
    <columns>Type__c</columns>
    <columns>SubType__c</columns>
    <columns>Display_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Item_Description__c</columns>
    <columns>Location__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>