force-app/main/default/objects/Item__c/listViews/Low_Inventory_Items.listView-meta.xml
<ListView>
    <fullName>Low_Inventory_Items</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Location__c</columns>
    <columns>Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Count__c</field>
        <operation>lessOrEqual</operation>
        <value>10</value>
    </filters>
    <label>Low (&lt;=10) Inventory Items</label>
</ListView>